[gd_scene load_steps=19 format=3 uid="uid://njoty3typbjp"]

[ext_resource type="Script" path="res://script/enemy.gd" id="1_3sppc"]
[ext_resource type="Texture2D" uid="uid://dxbrpphldsxp4" path="res://Assets/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-1.png" id="1_sg767"]
[ext_resource type="Texture2D" uid="uid://dm8fg87hedx71" path="res://Assets/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-2.png" id="2_8xk4x"]
[ext_resource type="Texture2D" uid="uid://cn16qmwpxh1l8" path="res://Assets/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-3.png" id="3_skfos"]
[ext_resource type="Texture2D" uid="uid://yix2qbe5i4my" path="res://Assets/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-4.png" id="4_30pw6"]
[ext_resource type="Texture2D" uid="uid://m4gtqph81vda" path="res://Assets/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-5.png" id="5_dxkwi"]
[ext_resource type="Texture2D" uid="uid://bdehmtna6dn63" path="res://Assets/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-6.png" id="6_ywyps"]
[ext_resource type="Texture2D" uid="uid://cq4pvu5i5wtos" path="res://Assets/Sunny-land-assets-files/PNG/sprites/frog/idle/frog-idle-1.png" id="7_k33da"]
[ext_resource type="Texture2D" uid="uid://c2otjsy4bsqph" path="res://Assets/Sunny-land-assets-files/PNG/sprites/frog/idle/frog-idle-2.png" id="8_iopox"]
[ext_resource type="Texture2D" uid="uid://cwgoc3nh70iuu" path="res://Assets/Sunny-land-assets-files/PNG/sprites/frog/idle/frog-idle-3.png" id="9_1d23p"]
[ext_resource type="Texture2D" uid="uid://bllmtx1lag255" path="res://Assets/Sunny-land-assets-files/PNG/sprites/frog/idle/frog-idle-4.png" id="10_kk137"]
[ext_resource type="Texture2D" uid="uid://sestldwdsyhp" path="res://Assets/Sunny-land-assets-files/PNG/sprites/frog/jump/frog-jump-1.png" id="11_dut6q"]
[ext_resource type="Texture2D" uid="uid://bi4ktmitx4i2k" path="res://Assets/Sunny-land-assets-files/PNG/sprites/frog/jump/frog-jump-2.png" id="12_xumk8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7fl6b"]
size = Vector2(26, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_kkiek"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_sg767")
}, {
"duration": 1.0,
"texture": ExtResource("2_8xk4x")
}, {
"duration": 1.0,
"texture": ExtResource("3_skfos")
}, {
"duration": 1.0,
"texture": ExtResource("4_30pw6")
}, {
"duration": 1.0,
"texture": ExtResource("5_dxkwi")
}, {
"duration": 1.0,
"texture": ExtResource("6_ywyps")
}],
"loop": false,
"name": &"death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_k33da")
}, {
"duration": 1.0,
"texture": ExtResource("8_iopox")
}, {
"duration": 1.0,
"texture": ExtResource("9_1d23p")
}, {
"duration": 1.0,
"texture": ExtResource("10_kk137")
}, {
"duration": 1.0,
"texture": ExtResource("7_k33da")
}, {
"duration": 1.0,
"texture": ExtResource("7_k33da")
}, {
"duration": 1.0,
"texture": ExtResource("7_k33da")
}, {
"duration": 1.0,
"texture": ExtResource("7_k33da")
}, {
"duration": 1.0,
"texture": ExtResource("7_k33da")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_dut6q")
}, {
"duration": 1.0,
"texture": ExtResource("12_xumk8")
}, {
"duration": 1.0,
"texture": ExtResource("7_k33da")
}],
"loop": true,
"name": &"jump",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vp7ed"]
radius = 186.097

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gp0fw"]
size = Vector2(26, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f6nuh"]
size = Vector2(30, 22)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_3sppc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1.5)
shape = SubResource("RectangleShape2D_7fl6b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kkiek")
animation = &"idle"

[node name="PLayerdetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PLayerdetection"]
shape = SubResource("CircleShape2D_vp7ed")

[node name="PlayerDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(-1, -5)
shape = SubResource("RectangleShape2D_gp0fw")

[node name="AttackPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackPlayer"]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_f6nuh")

[connection signal="body_entered" from="PLayerdetection" to="." method="_on_p_layerdetection_body_entered"]
[connection signal="body_exited" from="PLayerdetection" to="." method="_on_p_layerdetection_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="AttackPlayer" to="." method="_on_attack_player_body_entered"]
